# dalvik-rust

./: .gitignore  README.md
android_elf_emulator/: Cargo.toml  elf.go
android_elf_emulator/src/: elf.rs  lib.rs  symtable.rs  vm.rs
android_elf_emulator/src/elf_reader/: mod.rs
android_elf_emulator/src/emulator/: engine.rs  mod.rs  types.rs
android_launcher/: Cargo.toml  LICENSE.md
android_launcher/src/: main.rs
android_launcher/src/android_api/support/: mod.rs
android_launcher/src/dexparser/: bytecode_decoder.rs  mod.rs
android_launcher/src/dexparser/parser/: encoded_value.rs  parse_data.rs
android_launcher/src/jni_interface/: ContentProvider.rs  ServiceManager.rs  VmManager.rs  apps.rs  binder.rs  mod.rs  native_types.rs  parcel.rs
cpp_base/cpp_dex/src/: lang.cpp
dexparser/: Cargo.toml
dexparser/src/: lib.rs  result_types.rs
dexparser/src/parser/: mod.rs
emulator_bridge/loader/: Cargo.toml  jni.h
emulator_bridge/loader/src/: main.rs
go_base/: go.mod
go_base/lang/: lang.go
java_base/src/Fuse/: Fuse.java
java_base/src/android/: Manifest.java  R.java
java_base/src/android/accounts/: Account.java
java_base/src/android/annotation/: GuardedBy.java  IntDef.java  IntRange.java  NonNull.java  Nullable.java  RequiresPermission.java  SystemApi.java  SystemService.java  TestApi.java  (+1 more)
java_base/src/desktopDB/: DesktopDBService.java
java_base/src/obbstorage/: ObbMountStorage.java
jni_wrapper/: Cargo.toml
jni_wrapper/src/: lib.rs
jni_wrapper/src/loader/: mod.rs
js_based/: java.ts
rust_base/: Cargo.toml
rust_base/src/java/: mod.rs
(+363 files in other folders)
